compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__assert__assert_binary_operation.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/assert.rs
assertion_line: 28
expression: "\npub fn main() {\n  let x = True\n  assert x || False\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let x = True
  assert x || False
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> nil.
main() ->
    X = true,
    case X orelse false of
        true -> nil;
        false -> erlang:error(#{gleam_error => assert,
                message => <<"Assertion failed."/utf8>>,
                file => <<?FILEPATH/utf8>>,
                module => <<"my/mod"/utf8>>,
                function => <<"main"/utf8>>,
                line => 4,
                kind => binary_operator,
                operator => '||',
                left => #{kind => expression,
                    value => false,
                    start => 41,
                    'end' => 42
                    },
                right => #{kind => literal,
                    value => false,
                    start => 46,
                    'end' => 51
                    },
                start => 34,
                'end' => 51,
                expression_start => 41})
    end.
