compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__assert__assert_binary_operation2.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/assert.rs
assertion_line: 40
expression: "\npub fn eq(a, b) {\n  assert a == b\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn eq(a, b) {
  assert a == b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([eq/2]).

-file("project/test/my/mod.gleam", 2).
-spec eq(J, J) -> nil.
eq(A, B) ->
    case A =:= B of
        true -> nil;
        false -> erlang:error(#{gleam_error => assert,
                message => <<"Assertion failed."/utf8>>,
                file => <<?FILEPATH/utf8>>,
                module => <<"my/mod"/utf8>>,
                function => <<"eq"/utf8>>,
                line => 3,
                kind => binary_operator,
                operator => '==',
                left => #{kind => expression,
                    value => A,
                    start => 28,
                    'end' => 29
                    },
                right => #{kind => expression,
                    value => B,
                    start => 33,
                    'end' => 34
                    },
                start => 21,
                'end' => 34,
                expression_start => 28})
    end.
