compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__assert__assert_function_call.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/assert.rs
assertion_line: 62
expression: "\nfn bool() {\n  True\n}\n\npub fn main() {\n  assert bool()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn bool() {
  True
}

pub fn main() {
  assert bool()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec bool() -> boolean().
bool() ->
    true.

-file("project/test/my/mod.gleam", 6).
-spec main() -> nil.
main() ->
    case bool() of
        true -> nil;
        false -> erlang:error(#{gleam_error => assert,
                message => <<"Assertion failed."/utf8>>,
                file => <<?FILEPATH/utf8>>,
                module => <<"my/mod"/utf8>>,
                function => <<"main"/utf8>>,
                line => 7,
                kind => function_call,
                arguments => [],
                start => 41,
                'end' => 54,
                expression_start => 48})
    end.
