compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__assert__assert_with_message.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/assert.rs
assertion_line: 139
expression: "\npub fn main() {\n  assert True as \"This shouldn't fail\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  assert True as "This shouldn't fail"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> nil.
main() ->
    case true of
        true -> nil;
        false -> erlang:error(#{gleam_error => assert,
                message => <<"This shouldn't fail"/utf8>>,
                file => <<?FILEPATH/utf8>>,
                module => <<"my/mod"/utf8>>,
                function => <<"main"/utf8>>,
                line => 3,
                kind => expression,
                expression => #{kind => literal,
                    value => false,
                    start => 26,
                    'end' => 30
                    },
                start => 19,
                'end' => 30,
                expression_start => 26})
    end.
